--- a/indext.html
+++ b/indext.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styels/bloge.css">
 </head>
 <body>
-    
+  <div>
+    <h3>My Fast Website</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+     Dolores fugiat magnam veritatis blanditiis explicabo, odio in et aliquid,
+     velit id ullam, suscipit dolore adipisci! Aliquam corrupti in ab quas nobis!</p>
+  </div>  
 </body>
 </html>
