added the second and the thard blog

--- a/indext.html
+++ b/indext.html
@@ -8,10 +8,23 @@
 </head>
 <body>
   <div>
-    <h3>My Fast Website</h3>
+    <h3>My fast blog</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
      Dolores fugiat magnam veritatis blanditiis explicabo, odio in et aliquid,
      velit id ullam, suscipit dolore adipisci! Aliquam corrupti in ab quas nobis!</p>
   </div>  
+  <div>
+    <h3>My second bolg</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+     Dolores fugiat magnam veritatis blanditiis explicabo, odio in et aliquid,
+     velit id ullam, suscipit dolore adipisci! Aliquam corrupti in ab quas nobis!</p>
+  </div>  
+  <div>
+    <h3>My third bolg</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+     Dolores fugiat magnam veritatis blanditiis explicabo, odio in et aliquid,
+     velit id ullam, suscipit dolore adipisci! Aliquam corrupti in ab quas nobis!</p>
+  </div>  
+    
 </body>
 </html>
