--- a/indext.html
+++ b/indext.html
@@ -25,6 +25,14 @@
      Dolores fugiat magnam veritatis blanditiis explicabo, odio in et aliquid,
      velit id ullam, suscipit dolore adipisci! Aliquam corrupti in ab quas nobis!</p>
   </div>  
-    
+    <div>
+        <h3>You to push incremantal code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit massage </li>
+            <li>git push</li>
+        </ul>
+        
+    </div>
 </body>
 </html>
