added it's a nice pic

--- a/indext.html
+++ b/indext.html
@@ -34,5 +34,9 @@
         </ul>
         
     </div>
+    <div>
+        <h3>Nice Moments</h3>
+        <img src="images\picture.jpg" alt="">
+    </div>
 </body>
 </html>
